Added some unit and integration test